--- a/index.html
+++ b/index.html
@@ -5,18 +5,32 @@
     <meta charset="UTF-8" />
     <title>JumpCut</title>
 
-    <!-- https://bootswatch.com/darkly/ -->
-    <link href="https://maxcdn.bootstrapcdn.com/bootswatch/3.3.7/darkly/bootstrap.min.css" rel="stylesheet" integrity="sha384-S7YMK1xjUjSpEnF4P8hPUcgjXYLZKK3fQW1j5ObLSl787II9p8RO9XUGehRmKsxd" crossorigin="anonymous">
+    <!-- https://www.bootstrapcdn.com/bootswatch/ -->
+    <script type="text/javascript">
+        var defaultTheme = window['__defaultTheme'] = 'https://maxcdn.bootstrapcdn.com/bootswatch/3.3.7/darkly/bootstrap.min.css';
+        var url = (typeof sessionStorage !== 'undefined' && sessionStorage['jumpcut.theme.url']) || defaultTheme;
+        var link = document.createElement('link');
+        link.href = url;
+        link.type = 'text/css';
+        link.rel = 'stylesheet';
+        link.media = 'screen,print';
+        link.id = 'theme';
+        document.getElementsByTagName('head')[0].appendChild(link);
+    </script>
 
     <!-- Dependencies -->
+    <script src="https://code.jquery.com/jquery-1.12.4.min.js" integrity="sha256-ZosEbRLbNQzLpnKIkEdrPv7lOy9C27hHQ+Xp8a4MxAQ="
+        crossorigin="anonymous"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa"
+        crossorigin="anonymous"></script>
+
     <script src="/node_modules/react/dist/react.js"></script>
     <script src="/node_modules/react-dom/dist/react-dom.js"></script>
     <script src="/node_modules/redux/dist/redux.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/react-bootstrap/0.30.8/react-bootstrap.min.js"></script>
 </head>
 
-<body id="index">
-    <div id="wrapper"></div>
+<body>
+    <div id="index"></div>
 
     <!-- Main -->
     <script src="/dist/bundle.js"></script>
