--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa"
         crossorigin="anonymous"></script>
 
-    <script src="/node_modules/react/dist/react.js"></script>
-    <script src="/node_modules/react-dom/dist/react-dom.js"></script>
+    <script src="/node_modules/react/umd/react.production.min.js"></script>
+    <script src="/node_modules/react-dom/umd/react-dom.production.min.js"></script>
     <script src="/node_modules/redux/dist/redux.js"></script>
 </head>
 
