Add deployment scripts

--- a/app/index.html
+++ b/app/index.html
@@ -24,9 +24,9 @@
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa"
         crossorigin="anonymous"></script>
 
-    <script name="react" src="/node_modules/react/umd/react.production.min.js"></script>
-    <script name="react-dom" src="/node_modules/react-dom/umd/react-dom.production.min.js"></script>
-    <script name="redux" src="/node_modules/redux/dist/redux.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/react/16.1.0/umd/react.production.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/react-dom/16.1.0/umd/react-dom.production.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/redux/3.7.2/redux.min.js"></script>
 </head>
 
 <body>
