--- a/index.html
+++ b/index.html
@@ -26,7 +26,8 @@
 
     <script name="react" src="/node_modules/react/umd/react.production.min.js"></script>
     <script name="react-dom" src="/node_modules/react-dom/umd/react-dom.production.min.js"></script>
-    <script name="redux" src="/node_modules/redux/dist/redux.js"></script>
+    <script name="redux" src="/node_modules/redux/dist/redux.min.js"></script>
+    <script name="react-bootstrap" src="/node_modules/react-bootstrap/dist/react-bootstrap.min.js"></script>
 </head>
 
 <body>
