Add commands for wikis

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 </head>
 
 <body>
-    <div id="index"></div>
+    <div id="index" style="overflow: hidden"></div>
 
     <!-- Main -->
     <script src="/dist/bundle.js"></script>
