--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
     <script name="react-dom" src="/node_modules/react-dom/umd/react-dom.production.min.js"></script>
     <script name="redux" src="/node_modules/redux/dist/redux.min.js"></script>
     <script name="react-bootstrap" src="/node_modules/react-bootstrap/dist/react-bootstrap.min.js"></script>
+    <link rel="stylesheet" href="https://use.fontawesome.com/f6e7af6507.css">
 </head>
 
 <body>
