--- a/index.html
+++ b/index.html
@@ -4,12 +4,12 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-    <title>JumpCut</title>
+    <title>Phoenix</title>
 
     <!-- https://www.bootstrapcdn.com/bootswatch/ -->
     <script type="text/javascript">
         var defaultTheme = window['__defaultTheme'] = 'https://maxcdn.bootstrapcdn.com/bootswatch/3.3.7/darkly/bootstrap.min.css';
-        var url = (typeof localStorage !== 'undefined' && localStorage['jumpcut.theme.url']) || defaultTheme;
+        var url = (typeof localStorage !== 'undefined' && localStorage['app.theme.url']) || defaultTheme;
         var link = document.createElement('link');
         link.href = url;
         link.type = 'text/css';
