--- a/backend/src/static/frontend/index.html
+++ b/backend/src/static/frontend/index.html
@@ -21,10 +21,10 @@
     </script>
 
     <!-- Dependencies -->
-    <script name="react" src="/node_modules/react/umd/react.production.min.js"></script>
-    <script name="react-dom" src="/node_modules/react-dom/umd/react-dom.production.min.js"></script>
-    <script name="redux" src="/node_modules/redux/dist/redux.min.js"></script>
-    <script name="react-bootstrap" src="/node_modules/react-bootstrap/dist/react-bootstrap.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/react/16.3.2/umd/react.production.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/react-dom/16.3.2/umd/react-dom.production.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/redux/3.7.2/redux.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/react-bootstrap/0.32.1/react-bootstrap.min.js"></script>
     <link rel="stylesheet" href="https://use.fontawesome.com/f6e7af6507.css">
 </head>
 
